feat: 更新权限码生成逻辑
